# CostPilot

./: .dockerignore  .gitignore  .pre-commit-config.yaml  ARTIFACT_SUPPORT.md  BUILD_PLAN.md  CHANGELOG.md  CLI.md  Cargo.toml  DRIFT_SAFE_AUTOFIX.md  Dockerfile  EXEMPTION_WORKFLOW.md  GITHUB_RELEASE_INSTRUCTIONS.md  GRAMMAR_CONTRACT.md  GTM_FINAL_AUDIT_SUMMARY.md  GTM_READINESS_CONFIRMATION.md  IMPLEMENTATION_CHECKLIST.md  INVESTIGATION_REPORT.md  LICENSE  LICENSE_CONTRACT_VERIFICATION.md  PHASE_1_DOUBLE_CHECK.md  PHASE_1_INVESTIGATION_REPORT.md  POLICY_LIFECYCLE.md  PYTHON_TEST_ALIGNMENT.md  README.md  REPO_QUALITY_REPORT.md  SECURITY_AUDIT_2026-01-08.md  SECURITY_FINAL_AUDIT.md  SLO_BURN_ALERTS.md  SLO_ENGINE.md  TESTING_IMPLEMENTATION_SUMMARY.md  TESTING_QUICK_REF.md  WASM_BUILD.md  WINDOWS_BUILD_HANDOFF.md  WINDOWS_BUILD_VALIDATION.txt  action.yml  ai-context.md  build.rs  chaos-dashboard.md  copilot-context.md  costpilot  (+30 more)
.cargo/: config.toml
.costpilot/: audit_log.json  baselines.json  exemptions.yml  policies.yml  rate_limit.json  slo.yml
.github/: RELEASE_CHECKLIST.md  copilot-instructions.md
.scanner/: stability_report.json
benches/: engine_benchmarks.rs
build_artifacts/: phase12_status.txt  phase22_summary.txt  phase23_summary.txt  py_phase10_result.txt  remediation_plan.yaml
cleanup/build_artifacts/: package.json  pyproject.toml  setup.py
cleanup/build_artifacts/build_artifacts/: phase12_remaining_failures.txt  phase13_success.txt  phase20_rust_failures.txt  phase20_summary.txt  py_phase10_summary.txt  remediation_plan_phase16.yaml
cleanup/build_artifacts/costpilot.egg-info/: PKG-INFO  SOURCES.txt
code-review-results/: commit-quality.json  cyclomatic-complexity.json  cyclomatic-summary.json  documentation-check.json  pr-size.json  test-coverage.json
completions/: costpilot.bash  costpilot.fish  costpilot.zsh
configs/: costpilot.yml.example  static-analysis.toml
costpilot-license-issuer/: Cargo.toml  INTEGRATION_GUIDE.md  README.md  SUMMARY.md  keypair_info.json  license_enterprise.json  license_free.json  license_premium.json
costpilot-license-issuer/examples/: generate_test_license.rs  simple_api_server.rs
costpilot-license-issuer/src/: lib.rs
docs/: ACTION_PERMISSIONS.md  ADVANCED_PREDICTION.md  ARTIFACT_SUPPORT.md  AUDIT_LOGS.md  BASELINES_SYSTEM.md  BEHAVIOR_FREEZE_CONTRACT.md  CANONICAL_LAYOUT_CONTRACT.md  CLI_QUICKSTART.md  CONTRACT.md  DEMO_GIF_SCRIPT.md  DEMO_REPO.md  DETERMINISM_CONTRACT.md  DRIFT_SAFE_AUTOFIX.md  ERROR_SIGNATURES_CONTRACT.md  GRAMMAR_CONTRACT.md  GRAPH_MAPPING.md  HACKER_NEWS_LAUNCH.md  IMPLEMENTATION_STATUS.md  LAUNCH_BLOG.md  LICENSE_ISSUER_QUICKSTART.md  LICENSE_OPERATIONS.md  LICENSE_WEBHOOK_IMPLEMENTATION.md  MERMAID_EXAMPLES.md  PERFORMANCE_BASELINES.md  PERFORMANCE_BUDGETS.md  POLICY_LIFECYCLE.md  POLICY_METADATA.md  PRICING.md  PRICING_IMPLEMENTATION.md  PRODUCT_HUNT_LAUNCH.md  PROGRESS_TRACKING.md  PROVENANCE_CONTRACT.md  PR_COMMENT_QUALITY_CONTRACT.md  QUALITY_CONTRACTS_SUMMARY.md  REGRESSION_JUSTIFICATION_CONTRACT.md  RELEASE_PROCESS.md  SECURITY.md  SELF_CONSISTENCY_TESTS_CONTRACT.md  SEO_STRATEGY.md  SLO_BURN_ALERTS.md  (+37 more)
examples/: baselines.json  cdk_lambda_api.template.json  cloudformation_web_app.json  drift_safe_operation.json  exemptions.yaml  output_formats.md  policy_with_metadata.json  slo.json  slo_burn_examples.md  trend_history.json
heuristics/: cost_heuristics.json
policies/: test-budget-policy.version.json  test-budget-policy.yaml
pro_engine/: README.md  pro_engine.wit
pro_engine_wasm/: Cargo.toml
pro_engine_wasm/src/: lib.rs
reports/: CI_COST_STATUS.md  CONTRACT_ENFORCEMENT_SUMMARY.md  CONTRACT_FREEZE_CONFIRMATION.md  GTM_COMPLETION_SUMMARY.md  LICENSE_CONTRACT_ALIGNMENT_REPORT.md  LICENSE_E2E_PROOF.md  PHASE_1_CONTRACT_VERIFICATION.md  SECURITY_SWEEP_REPORT.md  WINDOWS_BUILD_HANDOFF.md  e2e_license_report.md  fork_readiness.md  license_contract.md  release_mode_report.md  security_audit_report.md
scanner/: Cargo.toml
scanner/src/: main.rs
scripts/: README.md  advanced_sustainability_testing.sh  ai_failure_analysis.sh  apply_mental_model_deltas.py  autonomous_operations_testing.sh  build_wasm.sh  ci_release_steps.sh  costpilot_test_script.sh  create_debian_package.sh  create_macos_installer.sh  create_rpm_package.sh  create_windows_installer.sh  detect_mental_model_conflicts.py  detect_mental_model_contradictions.py  discover_mental_model.py  e2e_license_validation.sh  error_reporting.sh  ethical_governance_testing.sh  extract_pubkey_hex.py  fork_readiness_check.sh  generate_changelog.sh  generate_test.py  global_scale_testing.sh  issue_license.py  logging_monitoring.sh  make_release_bundle.sh  manage_config.sh  metrics_monitoring.sh  peer_review_requirements.sh  performance_review.sh  postinstall.js  pre_push_checks.sh  print_target.sh  quantum_ready_testing.sh  real_time_streaming_testing.sh  rebuild_with_master_key.sh  release.sh  release_mode_assertions.sh  run_chaos_testing.sh  run_observability_testing.sh  (+29 more)
src/: config.rs  errors.rs  feature_flags.rs  lib.rs  license_issuer.rs  synthetic_unit_tests.rs  zero_cost_guard.rs
synthetic-monitoring/: health-check-20251220-125750.json  health-check-20251220-125833.json
tests/: .snapshot_terraform_tests.rs.pending-snap  README.md  adversarial_input_tests.rs  alerting_config.yml  analyze_trends.sh  analyze_trends_simple.sh  approval_reference_tests.rs  archive_compression_tests.rs  artifact_normalizer_tests.rs  authentication_security_tests.rs  authorization_security_tests.rs  automated_kpi_reporting.sh  backup.sh  baseline_edge_cases_tests.rs  baseline_tests.rs  binary_tests.rs  cdk_parser_tests.rs  chaos_engineering_tests.rs  ci_integration_tests.rs  cli_integration_tests.rs  cli_messaging_tests.rs  cloudformation_parser_tests.rs  cold_start_inference_tests.rs  comprehensive_path_tests.rs  confidence_intervals_tests.rs  config_drift_detect.sh  conftest.py  (+85 more)
tests/fuzz-rust/: Cargo.toml
tests/fuzz-rust/fuzz_targets/: artifact_parser.rs  policy_parser.rs  terraform_hcl_parser.rs  terraform_plan_parser.rs
(+4753 files in other folders)
