[package]
name = "costpilot"
version = "1.0.0"
edition = "2021"
rust-version = "1.75"
authors = ["GuardSuite"]
description = "Cost analysis and prediction for infrastructure as code"
license = "MIT"
repository = "https://github.com/Dee66/CostPilot"
keywords = ["finops", "terraform", "aws", "cost", "iac"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4.4", features = ["derive", "cargo", "env"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
anyhow = "1.0"
thiserror = "1.0"
colored = "2.1"
indicatif = "0.17"
chrono = { version = "0.4", features = ["serde"] }
semver = "1.0"
regex = "1.10"
walkdir = "2.4"
atty = "0.2"
term_size = "0.3"
sha2 = "0.10"
dirs = "5.0"
uuid = { version = "1.10", features = ["v4", "js"] }
getrandom = { version = "0.2", optional = true, features = ["js"] }
aes-gcm = "0.10"
hkdf = { version = "0.12", features = ["std"] }
ed25519-dalek = "2.1"
curve25519-dalek = "4"
base64 = "0.21"
rand = "0.8"
zeroize = "1.5"
hcl = { package = "hcl-rs", version = "0.19" }
jsonschema = "0.17"
cargo = { version = "0.93", optional = true }
subtle = "2"

# Conditional crypto dependencies (not available for WASM)
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
ring = "0.17"
wasmtime = "27"
hex = "0.4"
cargo = "0.93"

# Build dependencies for key generation
[build-dependencies]
ed25519-dalek = "2.1"
rand = "0.8"
hex = "0.4"
wit-bindgen = "0.24"
aes-gcm = "0.10"
hkdf = "0.12"
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1.0"
dirs = "5.0"

[dev-dependencies]
# E2E testing
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.8"
wat = "1"

# Property-based testing
proptest = "1.4"
quickcheck = "1.0"

# Snapshot testing
insta = { version = "1.34", features = ["json", "yaml"] }

# Test utilities
rstest = "0.18"
test-case = "3.3"
fake = "2.9"
pretty_assertions = "1.4"
arbitrary = "1.4.2"
quickcheck_macros = "1.1.0"

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
# Benchmarking (only for native targets)
criterion = { version = "0.3", default-features = false, features = ["cargo_bench_support"] }

[[bin]]
name = "costpilot"
path = "src/bin/costpilot.rs"

[[bin]]
name = "license-issuer"
path = "src/bin/license_issuer.rs"

[lib]
name = "costpilot"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = "z"          # Optimize for size instead of speed
lto = true
codegen-units = 1
strip = true
panic = "abort"          # Smaller panic handler

[profile.dev]
opt-level = 0

# WASM-optimized release profile
[profile.wasm-release]
inherits = "release"
opt-level = "z"          # Optimize for size
lto = true
codegen-units = 1
panic = "abort"          # Smaller panic handler
strip = true

# Obfuscated release profile for enhanced security
[profile.obfuscated]
inherits = "release"
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

# Minimal size profile for smallest possible binary
[profile.minimal]
inherits = "release"
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
# Additional size optimizations
debug = false
rpath = false
overflow-checks = false
incremental = false

# WASM support
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"
wee_alloc = "0.4"        # Smaller allocator for WASM

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3"

# Feature flags for conditional compilation
[features]
default = ["full"]
full = ["prediction", "detection", "policy", "mapping", "grouping", "slo", "yaml"]
prediction = []
detection = []
policy = []
mapping = []
grouping = []
slo = []
yaml = []
wasm = ["getrandom"]
release = []
obfuscate = []
compress = []
