[package]
name = "costpilot-license-issuer"
version = "1.0.0"
edition = "2021"
rust-version = "1.75"
authors = ["GuardSuite"]
description = "License issuing library for CostPilot - can be used as an API dependency"
license = "MIT"
repository = "https://github.com/Dee66/CostPilot"
keywords = ["license", "costpilot", "signing"]

[lib]
name = "costpilot_license_issuer"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ed25519-dalek = "2.1"
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"
base64 = "0.21"
thiserror = "1.0"
rand = "0.8"

[dev-dependencies]
tempfile = "3.8"
uuid = { version = "1.10", features = ["v4"] }
