[package]
name = "pro-engine-wasm"
version = "1.0.0"
edition = "2021"
rust-version = "1.75"

[lib]
name = "pro_engine_wasm"
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
