[package]
name = "repo-scanner"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2"
regex = "1"
ignore = "0.4"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
rayon = "1.7"
anyhow = "1.0"
thiserror = "1.0"
