[package]
name = "costpilot-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.costpilot]
path = ".."

[[bin]]
name = "fuzz_target_1"
path = "fuzz_targets/fuzz_target_1.rs"
test = false
doc = false
bench = false

[[bin]]
name = "terraform_plan_parser"
path = "fuzz_targets/terraform_plan_parser.rs"
test = false
doc = false
bench = false

[[bin]]
name = "policy_parser"
path = "fuzz_targets/policy_parser.rs"
test = false
doc = false
bench = false

[[bin]]
name = "terraform_hcl_parser"
path = "fuzz_targets/terraform_hcl_parser.rs"
test = false
doc = false
bench = false
